--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -6,5 +6,5 @@
     <string name="tasks">" tasks"</string>
     <string name="save">Done</string>
     <string name="newTaskHint">What\'s next :)</string>
-    <string name="clearTimer">Clear Timer</string>
+    <string name="clearTimer">Clear Notifiacation</string>
 </resources>
