Added line through text decoration

--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -3,8 +3,9 @@
     <string name="app_name">Elephant_todo_app</string>
     <string name="newTask">Ekle</string>
     <string name="enterNewTask">Yeni Görev</string>
-    <string name="tasks">" görev"</string>
+    <string name="tasks">" Görev"</string>
     <string name="save">Kaydet</string>
     <string name="newTaskHint">Yeni ne var :)</string>
     <string name="clearTimer">Bildirimi Kaldır</string>
+    <string name="done">" Tamamlandı"</string>
 </resources>
