--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -6,6 +6,6 @@
     <string name="tasks">" Tasks"</string>
     <string name="save">Done</string>
     <string name="newTaskHint">What\'s next :)</string>
-    <string name="clearTimer">Clear Notifiacation</string>
+    <string name="clearTimer">Clear Notification</string>
     <string name="done">" Done"</string>
 </resources>
