Canceled empty tasks

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -8,4 +8,5 @@
     <string name="newTaskHint">What\'s next :)</string>
     <string name="clearTimer">Clear Notification</string>
     <string name="done">" Done"</string>
+    <string name="errorEmptyError">Task can not be empty.</string>
 </resources>
