--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Elephant_todo_app</string>
+    <string name="app_name">Elephant</string>
     <string name="newTask">New Task</string>
     <string name="enterNewTask">New Task</string>
     <string name="tasks">" Tasks"</string>
@@ -9,4 +9,6 @@
     <string name="clearTimer">Clear Notification</string>
     <string name="done">" Done"</string>
     <string name="errorEmptyError">Task can not be empty.</string>
+    <string name="emptyList">Task list is empty today.
+        Let\'s do something today.</string>
 </resources>
