--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Elephant_todo_app</string>
+    <string name="app_name">Elephant</string>
     <string name="newTask">Ekle</string>
     <string name="enterNewTask">Yeni Görev</string>
     <string name="tasks">" Görev"</string>
@@ -9,4 +9,6 @@
     <string name="clearTimer">Bildirimi Kaldır</string>
     <string name="done">" Tamamlandı"</string>
     <string name="errorEmptyError">Boş görev olamaz.</string>
+    <string name="emptyList">Bugün görev listesi boş.
+        Hadi bugün bir şeyler yapalım.</string>
 </resources>
