Fix bugs and add new features

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -5,7 +5,7 @@
     <string name="enterNewTask">New Task</string>
     <string name="tasks">" Tasks"</string>
     <string name="save">Done</string>
-    <string name="newTaskHint">What\'s next :)</string>
+    <string name="newTaskHint">What\'s next?</string>
     <string name="clearTimer">Clear Notification</string>
     <string name="done">" Done"</string>
     <string name="errorEmptyError">Task can not be empty.</string>
