--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="emptyList">Task list is empty today.
         Let\'s do something today.</string>
     <string name="info_text">Elephant, your go-to app for simplifying your daily agenda. Swiftly jot down tasks, set deadlines, and prioritize with ease using the clean and user-friendly design. Experience seamless task management, mark completed duties, and boost productivity.</string>
+    <string name="team_name">Ally Bros v%1$s</string>
 </resources>
