--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -13,4 +13,8 @@
         Hadi bugün bir şeyler yapalım.</string>
     <string name="info_text">Elephant, günlük ajandanızı basitleştirmeniz için güvenilir bir arkadaşınız. Elephant uygulaması ile yapılacaklar listenizi hızlıca not alabilir, son tarihleri belirleyebilir ve temiz ve kullanıcı dostu tasarım sayesinde görevlerinizi kolayca düzenleyebilirsiniz. Sorunsuz görev yönetimi deneyimi yaşayın, tamamlanan görevleri işaretleyin ve üretkenliğin tadını çıkarın. Elephant, sadece bir uygulama değil; görev listeleriniz için kolaylık ve verimlilik sağlayan bir hafıza yardımcısıdır.</string>
     <string name="team_name">Ally Bros v%1$s</string>
+    <string name="open_settings_info_text">Elephant\'ın bildirim göndermek için izne ihtiyacı var. Lütfen ayarlardan izin verin.</string>
+    <string name="open_notification_permission_text">Elephant\'ın bildirim göndermesi için izin verilmesi gerekmektedir.</string>
+    <string name="open_elephant_settings">Ayarları Aç</string>
+    <string name="request_permission">Bildirim izni ver</string>
 </resources>
